objects/DataAnonymizationRequest__c.object
<CustomObject>
    <description>This object is created to store the data anonymizaton requests for contact, lead or any expected customer.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments will store reason for failure or any other specifics</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompletionDateTime__c</fullName>
        <description>It will store the data anonymization completion date time for that request.</description>
        <label>Completion Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact for which data anonymization request has been created</description>
        <inlineHelpText>Please select contact for which you want to create data anonymization request.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Anonymization Requests</relationshipLabel>
        <relationshipName>DataAnonymizationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailPhone__c</fullName>
        <description>The email or phone numer of customer for which data anonymization request has been created</description>
        <inlineHelpText>Please enter email id or phone number of customer for which you want to create data anonymization request.</inlineHelpText>
        <label>Email / Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Individual</referenceTo>
        <relationshipLabel>Data Anonymization Requests</relationshipLabel>
        <relationshipName>Data_Anonymization_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lead for which data anonymization request has been created</description>
        <inlineHelpText>Please select Lead for which you want to create data anonymization request.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Data Anonymization Requests</relationshipLabel>
        <relationshipName>DataAnonymizationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <description>It will store the data anonymization start date time for that request.</description>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Data anonymization request status will show the status of the request.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Anonymization Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DAR-{0}</displayFormat>
        <label>Data Anonymization Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Anonymization Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>